# paperback

./: Cargo.toml  DESIGN.md  Dockerfile  README.md  vendor.conf
.github/: dependabot.yml
.github/workflows/: binaries.yml  ci.yml
internal/schema/: doc.go  master.go  shard.go
internal/version/: version.go
pkg/: README.md
pkg/bip39/: README.md  bits.go  mnemonic.go  wordlist.go  wordlist_english.go  wordlist_generate.sh
pkg/bip39/data/: fetch.sh  vectors_english.json
pkg/crypto/: doc.go  encrypt_decrypt.go  encrypt_decrypt_test.go  packet.go  utils_test.go
pkg/paperback-core/: Cargo.toml
pkg/paperback-core/benches/: shamir.rs
pkg/paperback-core/src/: lib.rs  nom_helpers.rs
pkg/paperback-core/src/shamir/: dealer.rs  gf.rs  mod.rs  shamir.rs  shard.rs
pkg/paperback-core/src/v0/: .mod.rs.swp  backup.rs  mod.rs  recover.rs
pkg/paperback-core/src/v0/pdf/: generate.rs  mod.rs  pdf.rs  qr.rs
pkg/paperback-core/src/v0/pdf/fonts/: B612Mono-OFL.txt  README.md
pkg/paperback-core/src/v0/wire/: .key_shard.rs.swp  .nom_helpers.rs.swp  helpers.rs  internal.rs  key_shard.rs  main_document.rs  mod.rs
pkg/paperback-shamir/: Cargo.toml
pkg/paperback-shamir/src/: gf.rs  lib.rs  nom_helpers.rs  shamir.rs
pkg/polynomial/: doc.go  lagrange.go  lagrange_test.go  polynomial.go  utils_test.go
pkg/shamir/: secret.go  secret_test.go  shamir.go  shamir_test.go  share.go  share_test.go  utils.go  utils_test.go
src/: main.rs  raw.rs
