# paperback: paper backup generator suitable for long-term storage
# Copyright (C) 2018-2022 Aleksa Sarai <cyphar@cyphar.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "paperback"
version = "0.0.0"
authors = ["Aleksa Sarai <cyphar@cyphar.com>"]

description = "Paper backup generator suitable for long-term storage."
repository = "https://github.com/cyphar/paperback"
readme = "README.md"

keywords = ["shamir", "secret", "crypto", "paper", "backup"]
categories = ["cryptography"]
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[profile.release]
# Enable link-time optimisations.
lto = true

[workspace]
members = [
	"pkg/paperback-core",
]

[dependencies]
"paperback-core" = { path = "pkg/paperback-core" }

clap = "^3"
anyhow = "^1"
multibase = "^0.9"

[patch.crates-io]
# See <https://github.com/paritytech/unsigned-varint/pull/54>.
unsigned-varint = { git = "https://github.com/cyphar/unsigned-varint", branch = "nom6-errors" }
# See <https://github.com/fschutt/printpdf/pull/112>.
printpdf = { git = "https://github.com/fschutt/printpdf", rev = "4422e3a61dec97767a930322340c608338906702" }
