# paperback: paper backup generator suitable for long-term storage
# Copyright (C) 2018-2022 Aleksa Sarai <cyphar@cyphar.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "paperback-core"
version = "0.0.0"
authors = ["Aleksa Sarai <cyphar@cyphar.com>"]

description = "Paper backup generator suitable for long-term storage."
repository = "https://github.com/cyphar/paperback"
readme = "README.md"

keywords = ["shamir", "secret", "crypto", "paper", "backup"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
aead = "^0.4"
anyhow = "^1"
chacha20poly1305 = "^0.9"
digest = "^0.10"
ed25519-dalek = "^1.0.1"
itertools = "^0.10"
multibase = "^0.9"
multihash = "^0.15"
nom = "^7" # This must match the unsigned-varint version.
once_cell = "^1.9"
rand = "^0.7" # This must match the ed25519-dalek version.
printpdf = { version = "^0.5", features = ["svg"] }
qrcode = "^0.12"
serde = { version = "^1", features = ["derive"] }
signature = "^1"
thiserror = "^1"
tiny-bip39 = "^0.8"
typenum = "^1"
unsigned-varint = { version = "^0.7", features = ["nom"] }

[dev-dependencies]
quickcheck = "^1"
quickcheck_macros = "^1"

[patch.crates-io]
# See <https://github.com/paritytech/unsigned-varint/pull/54>.
unsigned-varint = { git = "https://github.com/cyphar/unsigned-varint", branch = "nom6-errors" }
# See <https://github.com/fschutt/printpdf/pull/112>.
printpdf = { git = "https://github.com/fschutt/printpdf", branch = "master" }
