# paperback: paper backup generator suitable for long-term storage
# Copyright (C) 2018-2022 Aleksa Sarai <cyphar@cyphar.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "paperback-core"
version = "0.0.0"
authors = ["Aleksa Sarai <cyphar@cyphar.com>"]
license = "GPL-3.0-or-later"

description = "Paper backup generator suitable for long-term storage."
repository = "https://github.com/cyphar/paperback"
readme = "README.md"

keywords = ["shamir", "secret", "crypto", "paper", "backup"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
aead = { version = "^0.5", features = ["std"] }
chacha20poly1305 = "^0.10"
crypto-common = "^0.1"
digest = "^0.10"
ed25519-dalek = { version = "^2.2.0", features = ["rand_core"] }
itertools = "^0.14"
multibase = "^0.9"
multihash = "^0.19"
multihash-codetable = { version = "^0.1", features = ["blake2b"] }
nom = "^7" # This must match the unsigned-varint version.
once_cell = "^1.21"
rand = "^0.9" # This must match the ed25519-dalek version.
rayon = "^1.10"
printpdf = { version = "^0.6", features = ["svg"] }
qrcode = "^0.14"
serde = { version = "^1", features = ["derive"] }
signature = "^2"
thiserror = "^2"
tiny-bip39 = "^2"
typenum = "^1"
unsigned-varint = { version = "^0.7", features = ["nom"] }

[features]
donotuse_expose_internal_modules = []

[dev-dependencies]
quickcheck = "^1"
quickcheck_macros = "^1"
criterion = { version = "^0.7", features = ["html_reports"] }
# FIXME: This is a hack to allow us to bencmark internal modules with criterion.
"paperback-core" = { path = ".", features = [ "donotuse_expose_internal_modules" ] }

[[bench]]
name = "shamir"
harness = false

[patch.crates-io]
# See <https://github.com/paritytech/unsigned-varint/pull/54>.
unsigned-varint = { git = "https://github.com/cyphar/unsigned-varint", branch = "nom6-errors" }
