# paperback: paper backup generator suitable for long-term storage
# Copyright (C) 2018-2020 Aleksa Sarai <cyphar@cyphar.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "paperback-shamir"
version = "0.0.0"
authors = ["Aleksa Sarai <cyphar@cyphar.com>"]

description = "Shamir secret sharing construction using GF(2^32)."
repository = "https://github.com/cyphar/paperback"
readme = "README.md"

keywords = ["shamir", "secret", "crypto"]
categories = ["cryptography"]
edition = "2018"

[dependencies]
rand = "^0.7"
itertools = "^0.8"
serde = { version = "^1", features = ["derive"] }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
